fix alignment

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -155,6 +155,7 @@
 
 .project4-text {
   height: 100vh;
+  margin-top: 5em;
 }
 
 .footer-container {
